# ARGUS

./: .gitignore  LICENSE  README.md  SETUP.md  argus.py  argus_control.py  argus_serve.py  auditor.py  auditor_chunking.py  auditor_prompts.py  auditor_render.py  backfill_users.py  batch.py  bench.py  config.example.toml  config.py  coverage.py  env_check.py  env_check_backfill.py  env_check_haiku.py  extractor.py  history_index.py  notify.py  progress.py  pyproject.toml  replay.py  report.py  requirements.txt  users.py  validate_v5_modes.py  workflow_rules.py
report_assets/: argus.css  argus.js
scripts/: bootstrap.sh  env.example.sh  report.sh  run-audit.sh  test.sh
tests/: conftest.py  test_argus.py  test_audit_history.py  test_audit_integration.py  test_backfill_users.py  test_batch.py  test_config.py  test_coverage.py  test_env_check.py  test_extractor_units.py  test_history_and_streak.py  test_replay.py  test_report.py  test_users.py  test_workflow_rules.py
